--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^16.7.6",
+    "@types/react-dom": "^16.0.9",
     "accurapp-scripts": "^4.0.6",
     "babel-preset-accurapp": "^4.0.6",
     "eslint-config-accurapp": "^4.1.5",
+    "typescript": "^3.1.6",
+    "webpack-blocks-ts": "^2.0.1",
     "webpack-preset-accurapp": "^4.1.4"
   },
   "dependencies": {
     "@accurat/tachyons-lite": "^1.0.4",
+    "@types/lodash": "^4.14.118",
     "d3": "^5.7.0",
     "lodash": "^4.17.11",
     "modern-normalize": "^0.5.0",
