--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "d3": "^5.7.0",
     "lodash": "^4.17.11",
     "modern-normalize": "^0.5.0",
+    "p-map": "^2.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "tachyons-extra": "^1.0.3"
