--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   "devDependencies": {
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
-    "accurapp-scripts": "^4.0.6",
+    "accurapp-scripts": "^4.1.8",
     "babel-preset-accurapp": "^4.0.6",
     "eslint-config-accurapp": "^4.1.5",
     "typescript": "^3.1.6",
     "webpack-blocks-ts": "^2.0.1",
+    "webpack-env": "^0.8.0",
     "webpack-preset-accurapp": "^4.1.4"
   },
   "dependencies": {
